Update catalog-info.yaml with latest configuration

--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -35,4 +35,5 @@ spec:
   system: conga-platform-core
   providesApis:
     - auth-api
-  dependsOn: []
+  dependsOn: 
+    - resource:default/conga-auth-service-dev-db-events
