feat: Add complete CI/CD pipeline with GitHub Actions
- Add Dockerfile for containerized deployment
- Create comprehensive GitHub Actions workflow (ci-cd.yaml)
- Implement multi-stage pipeline: test → build → deploy
- Add Kustomize overlays for dev and staging environments
- Create basic Node.js Express service with health endpoints
- Update Backstage catalog with CI/CD annotations
- Add package.json with proper dependencies and scripts

Pipeline features:
- Automated testing and quality gates
- Container image building and pushing to GHCR
- GitOps-style deployment via Kustomize image updates
- Environment-specific deployments (dev/staging)
- ArgoCD integration for automated sync
- Backstage integration for pipeline visibility

The service now supports full CI/CD workflow from code commit
to production deployment with proper GitOps practices.

--- a/k8s/overlays/staging/kustomization.yaml
+++ b/k8s/overlays/staging/kustomization.yaml
@@ -14,12 +14,12 @@ nameSuffix: ""
 
 patchesStrategicMerge: []
 
-# Development-specific configurations
+# Staging-specific configurations
 replicas:
 - name: auth-service
-  count: 1
+  count: 2
 
 # Environment-specific labels
 commonLabels:
-  environment: development
-  conga.io/environment: dev
+  environment: staging
+  conga.io/environment: staging
