feat: Update auth-service for production deployment
- Fix Docker image references to use ghcr.io/testorg08/auth-service
- Update port configuration from 8080 to 3000 to match Node.js app
- Add proper ingress configuration for external access
- Update CI/CD pipeline to build and push real Docker images
- Fix namespace references to use ssg1-dev consistently
- Add namespace resource to dev overlay for proper deployment

--- a/.argocd/dev-application.yaml
+++ b/.argocd/dev-application.yaml
@@ -17,7 +17,7 @@ spec:
     path: k8s/overlays/dev
   destination:
     server: https://kubernetes.default.svc
-    namespace: auth-dev
+    namespace: ssg1-dev
   syncPolicy:
     automated:
       prune: true
