--- a/k8s/base/deployment.yaml
+++ b/k8s/base/deployment.yaml
@@ -18,11 +18,15 @@ spec:
     spec:
       containers:
       - name: auth-service
-        image: nginx:1.21-alpine
+        image: ghcr.io/testorg08/auth-service:latest
         ports:
-        - containerPort: 8080
+        - containerPort: 3000
           name: http
         env:
+        - name: NODE_ENV
+          value: "production"
+        - name: PORT
+          value: "3000"
         - name: SERVICE_NAME
           value: "auth-service"
         - name: SITE_GROUP
@@ -31,20 +35,20 @@ spec:
           value: "1"
         resources:
           requests:
-            memory: "64Mi"
-            cpu: "50m"
-          limits:
             memory: "128Mi"
             cpu: "100m"
+          limits:
+            memory: "256Mi"
+            cpu: "200m"
         livenessProbe:
           httpGet:
             path: /health
-            port: 8080
+            port: 3000
           initialDelaySeconds: 30
           periodSeconds: 10
         readinessProbe:
           httpGet:
             path: /ready
-            port: 8080
+            port: 3000
           initialDelaySeconds: 5
           periodSeconds: 5
