--- a/k8s/base/kustomization.yaml
+++ b/k8s/base/kustomization.yaml
@@ -4,6 +4,7 @@ kind: Kustomization
 resources:
   - deployment.yaml
   - service.yaml
+  - ingress.yaml
 
 commonLabels:
   app.kubernetes.io/name: auth-service
