feat: Add GitHub Container Registry authentication
- Add image pull secret for GHCR authentication
- Update deployment to use the image pull secret
- Include secret in base manifests for ArgoCD management

--- a/k8s/base/deployment.yaml
+++ b/k8s/base/deployment.yaml
@@ -16,6 +16,8 @@ spec:
         app.kubernetes.io/component: backend
         conga.io/site-group: SSG1
     spec:
+      imagePullSecrets:
+      - name: ghcr-secret
       containers:
       - name: auth-service
         image: ghcr.io/testorg08/auth-service:latest
