--- a/k8s/base/kustomization.yaml
+++ b/k8s/base/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
   - deployment.yaml
   - service.yaml
   - ingress.yaml
+  - image-pull-secret.yaml
 
 commonLabels:
   app.kubernetes.io/name: auth-service
