fix: Build multi-platform Docker images for ARM64 support

--- a/k8s/overlays/dev/deployment-patch.yaml
+++ b/k8s/overlays/dev/deployment-patch.yaml
@@ -3,13 +3,9 @@ kind: Deployment
 metadata:
   name: auth-service
 spec:
-  replicas: 1
   template:
     spec:
       containers:
       - name: auth-service
-        env:
-        - name: ENVIRONMENT
-          value: "dev"
-        - name: LOG_LEVEL
-          value: "debug"
+        image: auth-service:local
+        imagePullPolicy: Never
