--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -15,7 +15,7 @@ metadata:
     # CI/CD Integration
     github.com/workflows: ci-cd.yaml
     backstage.io/kubernetes-id: auth-service
-    backstage.io/kubernetes-namespace: auth-dev
+    backstage.io/kubernetes-namespace: ssg1-dev
   tags:
     - authentication
     - authorization
