feat: Add staging deployment configuration
- Update staging kustomization to use correct image references
- Add staging namespace configuration
- Fix ArgoCD staging application to use main branch and ssg1-staging namespace
- Configure 2 replicas for staging environment

--- a/.argocd/staging-application.yaml
+++ b/.argocd/staging-application.yaml
@@ -13,11 +13,11 @@ spec:
   project: default
   source:
     repoURL: https://github.com/testorg08/auth-service
-    targetRevision: release
+    targetRevision: main
     path: k8s/overlays/staging
   destination:
     server: https://kubernetes.default.svc
-    namespace: auth-staging
+    namespace: ssg1-staging
   syncPolicy:
     syncOptions:
       - CreateNamespace=true
