--- a/k8s/overlays/staging/kustomization.yaml
+++ b/k8s/overlays/staging/kustomization.yaml
@@ -3,16 +3,12 @@ kind: Kustomization
 
 resources:
 - ../../base
+- namespace.yaml
 
 images:
-- name: nginx:1.21-alpine
+- name: ghcr.io/testorg08/auth-service
   newName: ghcr.io/testorg08/auth-service
   newTag: latest
-
-namePrefix: ""
-nameSuffix: ""
-
-patchesStrategicMerge: []
 
 # Staging-specific configurations
 replicas:
