--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -15,7 +15,7 @@ metadata:
     # CI/CD Integration
     github.com/workflows: ci-cd.yaml
     backstage.io/kubernetes-id: auth-service
-    backstage.io/kubernetes-namespace: ssg1-dev
+    backstage.io/kubernetes-namespace: ssg1-dev,ssg1-staging
     backstage.io/kubernetes-label-selector: 'app.kubernetes.io/name=auth-service'
   tags:
     - authentication
