--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -7,6 +7,7 @@ metadata:
   annotations:
     github.com/project-slug: testorg08/auth-service
     argocd/app-name: auth-service-dev,auth-service-staging
+    argocd/app-selector: app.kubernetes.io/name=auth-service
     backstage.io/techdocs-ref: dir:.
     conga.io/site-group: SSG1
     conga.io/sync-wave: "1"
