feat: Add code coverage and testing infrastructure
- Add comprehensive test suite with supertest
- Configure CI/CD to generate and upload coverage reports
- Add code coverage annotations to catalog-info.yaml
- Tests cover health endpoints and core functionality
- Coverage reports will be available in Backstage

--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -27,7 +27,15 @@ jobs:
         run: npm install
 
       - name: Run tests
-        run: npm test -- --passWithNoTests
+        run: npm test -- --passWithNoTests --coverage --coverageReporters=lcov --coverageReporters=text
+
+      - name: Upload coverage reports
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: coverage-report
+          path: coverage/
+          retention-days: 30
 
   build:
     name: Build and Push
