updated catalog to ssg-dev

--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -13,7 +13,7 @@ metadata:
     github.com/workflows: ci-cd.yaml
     # Kubernetes Integration
     backstage.io/kubernetes-id: auth-service
-    backstage.io/kubernetes-namespace: ssg1-dev,ssg1-staging
+    backstage.io/kubernetes-namespace: ssg1-dev
     backstage.io/kubernetes-label-selector: 'app.kubernetes.io/name=auth-service'
   tags:
     - authentication
